# OS_Homework

./: CMakeLists.txt  Makefile  README.md  a.img
include/: const.h  global.h  proc.h  proto.h
kernel/: console.c  global.c  main.c  proc.c  syscall.asm
lib/: klib.c
